--- a/css/contatos.css
+++ b/css/contatos.css
@@ -1,5 +1,6 @@
 .fale-conosco{
     width: 100%;
+    height: 900px;
     display: flex;
     flex-direction: column;
     gap: 160px;
@@ -21,6 +22,7 @@
 }
 .contato-container{
     display: flex;
+    font-size: 5rem;
     flex-direction: column;
     gap: 48px;
 }
