--- a/css/back.css
+++ b/css/back.css
@@ -4,7 +4,7 @@
     height: 50px;
     right: 24px;
     bottom: 24px;
-    background-color: var(--primary-color);
+    background-color: #EF5322;
     display: grid;
     place-content: center;
     color: #000;
